# desafio-mailerweb-ino

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260317_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: error_mapping.py  router.py
backend/app/api/v1/routers/: __init__.py  (+3 more)
backend/app/application/: README.md  __init__.py
backend/app/application/commands/: __init__.py  cancel_booking.py  create_booking.py  update_booking.py
backend/app/application/dto/: __init__.py  booking_dto.py
backend/app/application/ports/: __init__.py  repositories.py
backend/app/application/services/: __init__.py  booking_app_service.py
backend/app/core/: config.py  db.py  security.py
backend/app/domain/: README.md  __init__.py  exceptions.py
backend/app/domain/entities/: __init__.py  booking.py  outbox_event.py  room.py
backend/app/domain/enums/: __init__.py  booking_status.py  outbox_event_type.py  outbox_status.py
backend/app/domain/services/: __init__.py  booking_domain_service.py  outbox_payload_factory.py
backend/app/domain/value_objects/: __init__.py  booking_time_window.py  email_address.py
backend/app/infrastructure/: README.md
backend/app/infrastructure/email/: __init__.py  console_email_sender.py  email_sender.py
backend/app/workers/: outbox_worker.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_concurrency_postgres.py  test_outbox_and_worker.py
(+74 files in other folders)
